--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,11 @@
 .padding-right {
   padding-right: 2px;
 }
+
+html {
+  background-color: lightgrey;
+}
+
+.homepage-list {
+  background-color: #FFFFFF;
+}
